objects/Territory_Rep_Mapping__c.object
<CustomObject>
    <description>Mapping of zip codes to CAG Regions and Territories and assigned VDCs, as well as a mapping of States to LPD Districts and assigned Reps.</description>
    <fields>
        <fullName>Area_Manager_Territory__c</fullName>
        <description>This field is used by CAG.  For LPD, it will be blank.</description>
        <label>Area Manager Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Not Maintained</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IVDC_Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IVDC Rep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_Rep_Mapping1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>This field is used by CAG.  For LPD, it will be blank.</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>For CAG, this is the Region.  For LPD, this will be blank.</description>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_Rep_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_District__c</fullName>
        <description>For CAG, this is the VDC Territory.  For LPD, this is the District.</description>
        <label>Territory/District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Territory Rep Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Rep_Name__c</columns>
        <columns>Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TRM-{0000}</displayFormat>
        <label>Territory Rep Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Rep Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>